fixed background-image url issue on safari

--- a/css/website.css
+++ b/css/website.css
@@ -57,7 +57,7 @@
 	--light-theme-facebookContact-background-color: linear-gradient(0deg, rgba(0,111,255,1) 26%, rgba(94,201,255,1) 100%);
 	--light-theme-instagramContact-background-color: linear-gradient(340deg, rgba(244,255,0,1) 0%, rgba(255,39,218,1) 58%, rgba(255,39,218,1) 72%, rgba(0,83,255,1) 99%);
 	--light-theme-mailContact-background-color: linear-gradient(35deg, rgba(255,248,0,1) 0%, rgba(255,99,0,1) 67%);
-  --light-theme-background-preview-image-url: url("../images/backgroundImages/smoke_Light_Compressed.jpg");
+  --light-theme-background-preview-image-url: ./images/backgroundImages/smoke_Light_Compressed.jpg;
   --light-theme-background-image-url: ./images/backgroundImages/smoke_Light_Blurred.jpg;
 
 	--dark-theme-blur-background-color-Black: rgba(0,0,0,1);
@@ -73,7 +73,7 @@
 	--dark-theme-facebookContact-background-color: linear-gradient(0deg, rgba(0,48,255,1) 0%, rgba(9,187,255,1) 100%);
 	--dark-theme-instagramContact-background-color: linear-gradient(340deg, rgba(255,222,0,1) 0%, rgba(236,17,198,1) 69%, rgba(9,31,255,1) 100%);
 	--dark-theme-mailContact-background-color: linear-gradient(45deg, rgba(255,179,0,1) 0%, rgba(255,0,94,1) 100%);
-  --dark-theme-background-preview-image-url: url("../images/backgroundImages/smoke_Dark_Compressed.jpg");
+  --dark-theme-background-preview-image-url: ./images/backgroundImages/smoke_Dark_Compressed.jpg;
   --dark-theme-background-image-url: ./images/backgroundImages/smoke_Dark_Blurred.jpg;
 
 	--theme-blur-background-color-Black: var(--light-theme-blur-background-color-Black);
@@ -162,7 +162,6 @@ p {
 	margin:-0.5em;
   width:101vw;
   height:calc(var(--vh, 1vh) * 101);
-	background-image:var(--theme-background-preview-image-url);
 	background-repeat:no-repeat;
 	background-size:cover;
 	background-position:50% 0%;
